--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,12 @@
 
 
 
-<link rel="canonical" href="http://example.org/">
-  <link href="http://example.org/index.xml" rel="alternate" type="application/rss+xml" title="トマロウ">
-  <link href="http://example.org/index.xml" rel="feed" type="application/rss+xml" title="トマロウ"><meta property="og:title" content="トマロウ" />
+<link rel="canonical" href="http://tomarou-public-bucket.s3-website-ap-northeast-1.amazonaws.com/">
+  <link href="http://tomarou-public-bucket.s3-website-ap-northeast-1.amazonaws.com/index.xml" rel="alternate" type="application/rss+xml" title="トマロウ">
+  <link href="http://tomarou-public-bucket.s3-website-ap-northeast-1.amazonaws.com/index.xml" rel="feed" type="application/rss+xml" title="トマロウ"><meta property="og:title" content="トマロウ" />
 <meta property="og:description" content="留学生ための物件を探すガイド" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/" />
+<meta property="og:url" content="http://tomarou-public-bucket.s3-website-ap-northeast-1.amazonaws.com/" />
 
 <meta itemprop="name" content="トマロウ">
 <meta itemprop="description" content="留学生ための物件を探すガイド"><meta name="twitter:card" content="summary"/>
@@ -48,7 +48,7 @@
     
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top shadow-sm" id="navbar-main-menu">
     <div class="container">
-        <a class="navbar-brand font-weight-bold" href="http://example.org/">トマロウ</a>
+        <a class="navbar-brand font-weight-bold" href="http://tomarou-public-bucket.s3-website-ap-northeast-1.amazonaws.com/">トマロウ</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -139,8 +139,8 @@
             
             <p class="card-text text-muted text-uppercase">2021年07月10日</p>
             <div class="card-text">
-                ​日本でアパートを契約するとき、必ず｢火災保険｣への加入を求められます。この火災保険とはどういうものなのでしょうか。
-​仮に誰かが入居したアパートの部屋で火事を起こしてしまったとします。その部屋は管理者(大家さんや管理会社)の持ち物ですから。。。
+                ​
+建物が完成した後、経過した年数の事です。例：2021年現在、1995年に建てられた建物の築年数は「26年」です。特に、築年数1年未満のものを「新築」と呼びます。​。。。
             </div>
         </div>
     </a>
